[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Scenes/Quit.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/Retry.gd" type="Script" id=2]
[ext_resource path="res://src/Scenes/UserInterface.gd" type="Script" id=3]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 27.0
margin_top = 8.0
margin_right = 67.0
margin_bottom = 22.0
text = "Score : %s "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 3.0
margin_right = 8.0
margin_bottom = 3.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 0.243137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_title" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -148.0
margin_right = 13.9999
margin_bottom = -125.0
rect_scale = Vector2( 1.26232, 1.96542 )
text = "Paused"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="final_score" type="Label" parent="PauseOverlay"]
visible = false
margin_left = 743.0
margin_top = 69.0
margin_right = 902.0
margin_bottom = 131.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.9999
margin_top = -71.0
margin_right = -26.9999
margin_bottom = -27.0
rect_scale = Vector2( 2.57594, 2.17484 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_right = 49.0
margin_bottom = 20.0
text = "Retry "
script = ExtResource( 2 )

[node name="Quit" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_top = 24.0
margin_right = 49.0
margin_bottom = 44.0
text = "Quit"
script = ExtResource( 1 )

[connection signal="button_up" from="PauseOverlay/VBoxContainer/Retry" to="PauseOverlay/VBoxContainer/Retry" method="_on_button_up"]
[connection signal="button_up" from="PauseOverlay/VBoxContainer/Quit" to="PauseOverlay/VBoxContainer/Quit" method="_on_button_up"]
